--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,3 @@
 [Lists]
 AdGuard = https://raw.githubusercontent.com/schettada/CFPiHole/master/mylist/adguard.txt
+Analytics = https://raw.githubusercontent.com/schettada/CFPiHole/master/mylist/analytics.txt
