change the actions to push only.

--- a/.github/workflows/updateCF.yml
+++ b/.github/workflows/updateCF.yml
@@ -5,8 +5,8 @@ name: Python application
 
 on:
   push:
-  schedule:
-    - cron: '0 0 * * *'
+#  schedule:
+#    - cron: '0 0 * * *'
 permissions:
   contents: read
 
